fix(post): make hr more invisible

--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -101,6 +101,8 @@
   & hr {
     margin-top: var(--section-gap);
     margin-bottom: var(--section-gap);
+    color: var(--color-text-transparent);
+    opacity: .5;
   }
 
   & figure {
